src/objects/ErrorHandler__c.object
<CustomObject>
    <fields>
        <fullName>ClassName__c</fullName>
        <label>ClassName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <label>ErrorHandler</label>
    <nameField>
        <label>ErrorHandler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ErrorHandlers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>